# kv-cache-adaserve

./: .gitignore  .gitmodules  CALIBRATION_PIPELINE.md  CLAUDE.md  README.md  TASKS.md  TRAINING.md  class_report.py  evaluate_classifier.py  kfold_eval.py  phase_b.py  pyproject.toml  score_strategies.py  selector.py  signals.py  strategies.py  train_classifier.py
backends/runners/: README.md  run_adakv.py  run_dynamickv.py  run_kvquant.py  run_kvquant_calibrate.py
backends/runners/adakv_env/: pyproject.toml
backends/runners/dynamickv_env/: README.md  pyproject.toml
backends/runners/kvquant_env/: README.md  pyproject.toml
calib100/: adakv.jsonl  baseline.jsonl  dynamickv.jsonl  kvquant_3b.jsonl  kvquant_8b.jsonl  measurements_lam0.1.jsonl  measurements_lam1.0.jsonl  measurements_lam10.0.jsonl  prompts.jsonl  signals.jsonl  training_lam0.1.jsonl  training_lam1.0.jsonl  training_lam10.0.jsonl
calibration/: collect_signals.py  join_labels.py  make_labels.py  prompts.py  score_baseline.py  score_mock.py  score_strategies.py
models/: phase_b_lam0.1.pt  phase_b_lam1.0.pt  phase_b_lam1.0_stratified.pt  phase_b_lam10.0.pt
