[project]
name = "adakv-runner"
version = "0.0.1"
description = "Per-backend runner env for AdaKV — pinned to upstream's Llama-3.1-compatible transformers."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "transformers==4.44.2",
    "accelerate>=0.33",
    "datasets>=2.20",
    "numpy>=1.24",
    "tqdm>=4.66",
    # adakv itself, vendored as a git submodule at backends/adakv.
    "adakv",
    # flash-attn is intentionally NOT listed: it requires --no-build-isolation
    # against the installed torch ABI. Install manually after `uv sync`:
    #   uv pip install flash-attn --no-build-isolation
]

[tool.uv]
package = false

[tool.uv.sources]
adakv = { path = "../../adakv", editable = true }
