[project]
name = "dynamickv-runner"
version = "0.0.1"
description = "Per-backend runner env for DynamicKV. The DynamicKV submodule isn't pip-installable; the runner adds it to sys.path."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "transformers>=4.44,<4.46",   # upstream targets 4.44.x
    "accelerate>=0.33",
    "datasets>=2.20",
    "numpy>=1.24",
    "tqdm>=4.66",
    # flash-attn is required (DynamicKV's patches replace flash_attention_2 forward):
    #   uv pip install --project backends/runners/dynamickv_env flash-attn --no-build-isolation
]

[tool.uv]
package = false
