[project]
name = "kvquant-runner"
version = "0.0.1"
description = "Per-backend runner env for KVQuant. Hosts the simquant evaluation path."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "accelerate>=0.33",
    "datasets>=2.20",
    "scikit-learn>=1.3",       # KVQuant uses k-means via sklearn
    "sentencepiece>=0.2",
    "numpy>=1.24",
    "tqdm>=4.66",
    # KVQuant's quant subpackage, vendored as a git submodule.
    "kvquant",
    # flash-attn must be built against the installed torch ABI:
    #   uv pip install flash-attn --no-build-isolation
    # (Optional — the runner falls back to eager attention if FA isn't available.)
]

[tool.uv]
package = false

[tool.uv.sources]
kvquant = { path = "../../kvquant/quant", editable = true }
